--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 spring.cache.redis.time-to-live=10000
+spring.cache.type=redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.use-key-prefix=false
